added UI to feed, followers, and following resources for users

--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -21,10 +21,11 @@
         <%= link_to "Following", following_path(@user.username), class: "nav-link" %>
       </li>
     </ul>
-
   </div>
 </div>
 
-<% @user.own_photos.each do |photo| %>
-  <%= render "photos/photo", photo: photo %>
+<% @user.followers.each do |follower| %>
+  <ul class="list-group">
+    <li class="list-group-item"> <%= link_to "#{follower.username}", user_path(follower.username) %> </li>
+  </ul>
 <% end %>
