--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -25,6 +25,6 @@
   </div>
 </div>
 
-<% @user.own_photos.each do |photo| %>
+<% @user.feed.each do |photo| %>
   <%= render "photos/photo", photo: photo %>
 <% end %>
