--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -21,10 +21,11 @@
         <%= link_to "Following", following_path(@user.username), class: "nav-link" %>
       </li>
     </ul>
-
   </div>
 </div>
 
-<% @user.own_photos.each do |photo| %>
-  <%= render "photos/photo", photo: photo %>
+<% @user.leaders.each do |leader| %>
+  <ul class="list-group">
+    <li class="list-group-item"> <%= link_to "#{leader.username}", user_path(leader.username) %> </li>
+  </ul>
 <% end %>
