--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -25,7 +25,5 @@
 </div>
 
 <% @user.followers.each do |follower| %>
-  <ul class="list-group">
-    <li class="list-group-item"> <%= link_to "#{follower.username}", user_path(follower.username) %> </li>
-  </ul>
+  <%= render "follow_requests/follow", person: follower %>
 <% end %>
