--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -25,7 +25,5 @@
 </div>
 
 <% @user.leaders.each do |leader| %>
-  <ul class="list-group">
-    <li class="list-group-item"> <%= link_to "#{leader.username}", user_path(leader.username) %> </li>
-  </ul>
+  <%= render "follow_requests/follow", person: leader %>
 <% end %>
