--- a/app/views/follow_requests/_follow.html.erb
+++ b/app/views/follow_requests/_follow.html.erb
@@ -1,3 +1,7 @@
-<ul class="list-group">
-    <li class="list-group-item"> <%= link_to "#{person.username}", user_path(person.username) %> </li>
-</ul>
+<div class="row">
+    <div class="col-md-6 offset-3">
+        <div class="list-group">
+            <%= link_to "#{person.username}", user_path(person.username), class: "list-group-item list-group-item-action no-underline" %>
+        </div>
+    </div>
+</div>
